--- a/src/pages/home/home.scss
+++ b/src/pages/home/home.scss
@@ -1,3 +1,17 @@
 page-home {
-
+	.empty {
+	  display:grid;
+	  height:90%;
+	  .empty-content{
+			text-align: center;
+			margin: auto;
+			.empty-icon{
+				font-size: 15em;
+				color: #eaeaea;
+			}
+			p.empty-text{
+				color: gray;
+			}
+		}
+	}
 }
