--- a/src/theme/variables.scss
+++ b/src/theme/variables.scss
@@ -52,6 +52,7 @@ $colors: (
 // App Material Design Variables
 // --------------------------------------------------
 // Material Design only Sass variables can go here
+$alert-md-max-width: 500px;
 
 
 
